<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:paddingTop="50dp"
    android:paddingBottom="30dp"
    android:paddingStart="50dp"
    android:paddingEnd="50dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:text="@string/perms_title"
                android:id="@+id/perms_title"
                android:layout_marginBottom="20dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/setupParagraphs"
                android:id="@+id/perms_intro"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perms_phone"
                style="@style/setupParagraphs"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perms_call_log"
                style="@style/setupParagraphs"
                android:visibility="gone"
                android:id="@+id/perms_call_log"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perms_record"
                style="@style/setupParagraphs"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perms_contacts"
                style="@style/setupParagraphs"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perms_files"
                style="@style/setupParagraphs"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perms_finish"
                style="@style/setupParagraphs"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/setup_perms_next"
                android:text="@string/next"
                style="@style/setupButtons"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"/>

        </LinearLayout>

        </ScrollView>

    </RelativeLayout>